# JS-Deobfuscator

./: Cargo.toml  OXC-HANDBOOK.md  OXC.md  README.md  TRACKER.md  test.js
docs/: NOTE.md  STRING_ROTATOR.md
examples/: comprehensive_deob.rs  constant_propagator.rs  debug_inlined.rs  debug_shuffler.rs  deobfuscate_file.rs  full_pipeline.rs  gen_baseline.rs  simple_deob.rs  test_brace_wrapper.js  test_control_flow_deflat.js  test_dead_code.js  test_for_var_hoister.js  test_identifier_renamer.js  test_shuffler_detector.rs  test_statement_splitter.js  test_static_eval.js  test_string_rotator.rs
inputs/: captcha.js  main.min.js  update.sh
js-tests/: pow_funcaptcha.js  pow_funcaptcha_inlined.js  test_string_rotator.js  test_string_rotator_inlined.js  test_xor_base64_decoder.js
outputs/: captcha_deob.js  main_deob.js
src/: lib.rs
src/core/: config.rs  deobfuscator.rs  engine.rs  error.rs  mod.rs  traits.rs
src/ecma/: mod.rs
src/ecma/array/: access.rs  extract.rs  mod.rs  search.rs  transform.rs
src/ecma/control/: mod.rs
src/ecma/dead/: mod.rs
src/ecma/json/: mod.rs
src/ecma/math/: arithmetic.rs  minmax.rs  mod.rs  rounding.rs  trig.rs
src/ecma/number/: global.rs  instance.rs  mod.rs  static_methods.rs
src/ecma/object/: mod.rs
src/ecma/operators/: arithmetic.rs  bitwise.rs  comparison.rs  logical.rs  mod.rs  ternary.rs  unary.rs
src/ecma/regexp/: mod.rs
src/ecma/string/: access.rs  extract.rs  mod.rs  modify.rs  search.rs  static_methods.rs  transform.rs
src/ecma/syntax/: mod.rs
src/ecma/uri/: mod.rs
src/extensions/: mod.rs
src/extensions/string_rotator/: call_collector.rs  component_collector.rs  executor.rs  inliner.rs  (+2 more)
src/runtime/: mod.rs
src/transforms/: mod.rs
src/utils/: codegen.rs  literal.rs  mod.rs  sandbox.rs  scoping.rs  side_effects.rs  testing.rs
(+4 files in other folders)
